--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+        <a href="#">Download Excursion (Coming soon!)</a>
+        <video src="resources/assets/excursion.mp4" type="video/mp4" autoplay muted></video>
+    </header>
 </body>
 
 </html>
