--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <a href="#">Download Excursion (Coming soon!)</a>
         <video src="resources/assets/excursion.mp4" type="video/mp4" autoplay muted></video>
     </header>
+    <main>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <p><img src="resources/assets/camp.jpg" alt="Camp"></p>
+        <p><img src="resources/assets/phone.png" alt="Phone"></p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!)</a>
+        <small>© Excursion</small>
+    </main>
 </body>
 
 </html>
