--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header>
+        <a href="#">Download Excursion (Coming soon!)</a> <br>
         <h1>Discover hidden places in the world around you</h1>
-        <a href="#">Download Excursion (Coming soon!)</a>
+        
         <video src="resources/assets/excursion.mp4" type="video/mp4" autoplay muted></video>
     </header>
     <main>
